--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,14 +1,14 @@
 .app {
   height: 100vh;
-  
+
   /* grid container settings */
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
-  grid-template-areas: 
-    'header'
-    'main'
-    'footer';
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
 }
 
 .app > header {
