--- a/src/components/lang_selector/styles.module.css
+++ b/src/components/lang_selector/styles.module.css
@@ -1,6 +1,10 @@
 .container {
   display: flex;
   align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: antiquewhite;
+  z-index: 1;
 }
 
 .container > div {
