--- a/src/components/questionsanswers/quizitem/styles.module.css
+++ b/src/components/questionsanswers/quizitem/styles.module.css
@@ -1,3 +1,24 @@
 .highlight:hover {
   background-color: grey;
 }
+
+.listItem {
+  display: flex;
+  align-items: center;
+}
+
+.answerDescription {
+  padding-bottom: 10px;
+}
+
+.titleDefault {
+  color: #404040;
+}
+
+.titleWrong {
+  color: #660000;
+}
+
+.titleRight {
+  color: #006600;
+}
