--- a/src/components/lang_selector/styles.module.css
+++ b/src/components/lang_selector/styles.module.css
@@ -9,6 +9,20 @@
   border-bottom: 1px solid lightgrey;
 }
 
+@media (max-width: 500px) {
+  .container {
+    flex-direction: column;
+    align-items: start;
+  }
+}
+
+.answers {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: start;
+}
+
 .container > div {
   padding: 0 10px;
 }
