--- a/src/components/lang_selector/styles.module.css
+++ b/src/components/lang_selector/styles.module.css
@@ -12,7 +12,7 @@
 @media (max-width: 500px) {
   .container {
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
   }
 }
 
@@ -20,7 +20,7 @@
   display: flex;
   gap: 5px;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .container > div {
