Add eslint plugins, add stylelint

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,10 +1,10 @@
 .praporBlue {
-  background-color: #0066cc;
+  background-color: #06c;
   height: 10px;
 }
 
 .praporYellow {
-  background-color: #ffcc00;
+  background-color: #fc0;
   height: 10px;
 }
 
